--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,16 @@
-* {
-  width: 100%;
-  height: 100%;
+body {
+  touch-action: none;
   margin: 0;
-  padding: 0;
+  position: relative;
+  width: 100dvw;
+  height: 100dvh;
+  overflow: hidden;
 }
 
-body {
-  background-color: #191919;
+#root {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  flex-direction: column;
 }
 
